change name bitcoin, BTC -> fujicoin, FJC

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,31 +1,31 @@
 [package]
-name = "bitcoin"
+name = "fujicoin"
 version = "0.23.0"
 authors = ["Andrew Poelstra <apoelstra@wpsoftware.net>"]
 license = "CC0-1.0"
-homepage = "https://github.com/rust-bitcoin/rust-bitcoin/"
-repository = "https://github.com/rust-bitcoin/rust-bitcoin/"
-documentation = "https://docs.rs/bitcoin/"
-description = "General purpose library for using and interoperating with Bitcoin and other cryptocurrencies."
-keywords = [ "crypto", "bitcoin" ]
+homepage = "https://github.com/rust-fujicoin/rust-fujicoin/"
+repository = "https://github.com/rust-fujicoin/rust-fujicoin/"
+documentation = "https://docs.rs/fujicoin/"
+description = "General purpose library for using and interoperating with Fujicoin and other cryptocurrencies."
+keywords = [ "crypto", "fujicoin" ]
 readme = "README.md"
 
 [lib]
-name = "bitcoin"
+name = "fujicoin"
 path = "src/lib.rs"
 
 [features]
-fuzztarget = ["secp256k1/fuzztarget", "bitcoin_hashes/fuzztarget"]
+fuzztarget = ["secp256k1/fuzztarget", "fujicoin_hashes/fuzztarget"]
 unstable = []
 rand = ["secp256k1/rand-std"]
-use-serde = ["hex", "serde", "bitcoin_hashes/serde", "secp256k1/serde"]
+use-serde = ["hex", "serde", "fujicoin_hashes/serde", "secp256k1/serde"]
 
 [dependencies]
 bech32 = "0.7.2"
-bitcoin_hashes = "0.7.3"
+fujicoin_hashes = "0.7.3"
 secp256k1 = "0.17.1"
 
-bitcoinconsensus = { version = "0.19.0-1", optional = true }
+fujicoinconsensus = { version = "0.19.0-1", optional = true }
 serde = { version = "1", optional = true }
 hex = { version = "=0.3.2", optional = true }
 
