--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,17 +15,17 @@ name = "fujicoin"
 path = "src/lib.rs"
 
 [features]
-fuzztarget = ["secp256k1/fuzztarget", "fujicoin_hashes/fuzztarget"]
+fuzztarget = ["secp256k1/fuzztarget", "bitcoin_hashes/fuzztarget"]
 unstable = []
 rand = ["secp256k1/rand-std"]
-use-serde = ["hex", "serde", "fujicoin_hashes/serde", "secp256k1/serde"]
+use-serde = ["hex", "serde", "bitcoin_hashes/serde", "secp256k1/serde"]
 
 [dependencies]
 bech32 = "0.7.2"
-fujicoin_hashes = "0.7.3"
+bitcoin_hashes = "0.7.3"
 secp256k1 = "0.17.1"
 
-fujicoinconsensus = { version = "0.19.0-1", optional = true }
+bitcoinconsensus = { version = "0.19.0-1", optional = true }
 serde = { version = "1", optional = true }
 hex = { version = "=0.3.2", optional = true }
 
