--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,8 +3,8 @@ name = "fujicoin"
 version = "0.24.0"
 authors = ["Andrew Poelstra <apoelstra@wpsoftware.net>"]
 license = "CC0-1.0"
-homepage = "https://github.com/rust-fujicoin/rust-fujicoin/"
-repository = "https://github.com/rust-fujicoin/rust-fujicoin/"
+homepage = "https://github.com/fujicoin/rust-fujicoin/"
+repository = "https://github.com/fujicoin/rust-fujicoin/"
 documentation = "https://docs.rs/fujicoin/"
 description = "General purpose library for using and interoperating with Fujicoin and other cryptocurrencies."
 keywords = [ "crypto", "fujicoin" ]
@@ -27,6 +27,7 @@ secp256k1 = "0.18.0"
 
 bitcoinconsensus = { version = "0.19.0-1", optional = true }
 serde = { version = "1", optional = true }
+scrypt = { version = "0.2", default-features = false }
 
 [dev-dependencies]
 hex = "=0.3.2"
