--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ secp256k1 = { version = "0.19.0", features = [ "recovery" ] }
 
 bitcoinconsensus = { version = "0.19.0-1", optional = true }
 serde = { version = "1", optional = true }
+scrypt = { version = "0.2", default-features = false }
 
 [dev-dependencies]
 serde_derive = "<1.0.99"
