--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,20 +14,20 @@ readme = "README.md"
 [features]
 default = [ "secp-recovery" ]
 base64 = [ "base64-compat" ]
-fuzztarget = ["fujicoin_hashes/fuzztarget"]
+fuzztarget = ["bitcoin_hashes/fuzztarget"]
 unstable = []
 rand = ["secp256k1/rand-std"]
-use-serde = ["serde", "fujicoin_hashes/serde", "secp256k1/serde"]
+use-serde = ["serde", "bitcoin_hashes/serde", "secp256k1/serde"]
 secp-lowmemory = ["secp256k1/lowmemory"]
 secp-recovery = ["secp256k1/recovery"]
 
 [dependencies]
 bech32 = "0.7.2"
-fujicoin_hashes = "0.9.1"
+bitcoin_hashes = "0.9.1"
 secp256k1 = "0.20.0"
 
 base64-compat = { version = "1.0.0", optional = true }
-fujicoinconsensus = { version = "0.19.0-1", optional = true }
+bitcoinconsensus = { version = "0.19.0-1", optional = true }
 serde = { version = "1", features = [ "derive" ], optional = true }
 
 [dev-dependencies]
