--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,8 +3,8 @@ name = "fujicoin"
 version = "0.26.0"
 authors = ["Andrew Poelstra <apoelstra@wpsoftware.net>"]
 license = "CC0-1.0"
-homepage = "https://github.com/rust-fujicoin/rust-fujicoin/"
-repository = "https://github.com/rust-fujicoin/rust-fujicoin/"
+homepage = "https://github.com/fujicoin/rust-fujicoin/"
+repository = "https://github.com/fujicoin/rust-fujicoin/"
 documentation = "https://docs.rs/fujicoin/"
 description = "General purpose library for using and interoperating with Fujicoin and other cryptocurrencies."
 keywords = [ "crypto", "fujicoin" ]
@@ -29,6 +29,7 @@ secp256k1 = "0.20.0"
 base64-compat = { version = "1.0.0", optional = true }
 bitcoinconsensus = { version = "0.19.0-1", optional = true }
 serde = { version = "1", features = [ "derive" ], optional = true }
+scrypt = { version = "0.2", default-features = false }
 
 [dev-dependencies]
 serde_json = "<1.0.45"
